# EffectMidi

./: .gitignore  .npmrc  CHANGELOG.md  CMakeLists.txt  EffectPiano.ino  Effect_Piano_v1.3.0.ino  README.md  ZERO_CHECK.sln  ZERO_CHECK.vcxproj  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  eslint.config.cjs  package.json  patch.cmd  tailwind.config.js  theme.json  tsconfig.node.json  tsconfig.web.json
Effect_Piano/: Effect_Piano.cpp
doc/: effect-midi.rp2040.fzz
patches/: pmwinmm.patch
src/: EffectMidi.cpp
src/ino/EffectMidi/: ConfigCmd.cpp  EffectMidi.ino  EffectMidi.ino.bak  KeyCommand.cpp  LedController.cpp  MidiHandler.cpp  OledController.cpp  SerialBaseCommand.cpp  SerialCommandHolder.cpp  SerialRgbCommand.cpp  SetBackgroundColorCmd.cpp  SetColorCmd.cpp  SetForegroundColorCmd.cpp  UsbController.cpp  WaitingCmd.cpp
src/ino/EffectMidi/headers/: LedController.hpp  MidiHandler.hpp  OledController.hpp  PinDefine.hpp  SerialCommand.hpp  SerialCommandHolder.hpp  UsbController.hpp
src/main/: index.ts  ipcServer.ts  logger.ts  midi.ts  storage.ts
src/main/serial/: cmds.ts  serial.ts  usb.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  main.tsx
src/renderer/src/assets/: main.styl
src/renderer/src/common/: base.css  colors.ts  common.d.ts  ipcClient.ts  score.ts  store.ts  utils.ts
src/renderer/src/components/ConfigMenu/: index.styl  index.tsx
src/renderer/src/components/ConfigMenu/About/: index.tsx
src/renderer/src/components/ConfigMenu/Appearance/: index.tsx
src/renderer/src/components/ConfigMenu/Devices/: index.styl  index.tsx
src/renderer/src/components/ConfigMenu/Lights/: index.tsx
src/renderer/src/components/Keyboard/: Hanabi.tsx  Waterfall.tsx  index.styl  index.tsx  midi.ts
src/renderer/src/components/Loading/: index.styl  index.tsx
src/renderer/src/components/MenuContent/: index.tsx
src/renderer/src/components/MenuSlide/: index.styl
src/renderer/src/components/basic/: types.d.ts
src/renderer/src/components/effects/: timer.ts
src/renderer/src/config/: index.ts
src/renderer/src/lang/: en.yaml  index.ts  zh_cn.yaml
(+25 files in other folders)
